--- a/Example/AllPayMobileSDK iOS Example/Base.lproj/Main.storyboard
+++ b/Example/AllPayMobileSDK iOS Example/Base.lproj/Main.storyboard
@@ -169,6 +169,85 @@
             </objects>
             <point key="canvasLocation" x="948" y="498"/>
         </scene>
+        <!--電子地圖-->
+        <scene sceneID="DCQ-Gy-WCm">
+            <objects>
+                <viewController id="xXT-gN-TJW" customClass="ExpressMapViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="obQ-ap-pYz"/>
+                        <viewControllerLayoutGuide type="bottom" id="6nN-vp-vSm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="GU2-u1-Vfc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LogisticsSubType" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zNj-Td-ipQ">
+                                <rect key="frame" x="92" y="138" width="136" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="136" id="GVo-uv-G3r"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Run Ver." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8BQ-hx-PHQ">
+                                <rect key="frame" x="34" y="74" width="244" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="244" id="eLH-Wh-lhz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="J6i-bA-cM3">
+                                <rect key="frame" x="56" y="181" width="208" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="208" id="S2x-Z3-oBH"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="不代收貨款"/>
+                                    <segment title="代收貨款"/>
+                                </segments>
+                            </segmentedControl>
+                            <pickerView hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="URZ-qv-EP7">
+                                <rect key="frame" x="0.0" y="357" width="320" height="162"/>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LVa-Wu-jjN">
+                                <rect key="frame" x="85" y="230" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="zPj-Ec-Wuq"/>
+                                </constraints>
+                                <state key="normal" title="Call">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="J6i-bA-cM3" firstAttribute="top" secondItem="zNj-Td-ipQ" secondAttribute="bottom" constant="22" id="1qo-9e-Cri"/>
+                            <constraint firstItem="8BQ-hx-PHQ" firstAttribute="top" secondItem="obQ-ap-pYz" secondAttribute="bottom" constant="10" id="4LU-o2-ue9"/>
+                            <constraint firstAttribute="centerX" secondItem="8BQ-hx-PHQ" secondAttribute="centerX" constant="4" id="5B1-4I-wju"/>
+                            <constraint firstAttribute="centerX" secondItem="J6i-bA-cM3" secondAttribute="centerX" id="7K4-J6-PjA"/>
+                            <constraint firstItem="zNj-Td-ipQ" firstAttribute="top" secondItem="8BQ-hx-PHQ" secondAttribute="bottom" constant="43" id="8Vg-ho-8Ai"/>
+                            <constraint firstAttribute="trailing" secondItem="URZ-qv-EP7" secondAttribute="trailing" id="PjM-fe-cLX"/>
+                            <constraint firstItem="6nN-vp-vSm" firstAttribute="top" secondItem="URZ-qv-EP7" secondAttribute="bottom" id="UhY-Xp-k5E"/>
+                            <constraint firstAttribute="centerX" secondItem="zNj-Td-ipQ" secondAttribute="centerX" id="byW-om-Vuy"/>
+                            <constraint firstItem="LVa-Wu-jjN" firstAttribute="top" secondItem="J6i-bA-cM3" secondAttribute="bottom" constant="21" id="pEj-XR-vgd"/>
+                            <constraint firstItem="URZ-qv-EP7" firstAttribute="leading" secondItem="GU2-u1-Vfc" secondAttribute="leading" id="rdJ-3Z-Erx"/>
+                            <constraint firstAttribute="centerX" secondItem="LVa-Wu-jjN" secondAttribute="centerX" id="wTb-iu-7Ol"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="電子地圖" id="LIU-4N-E3G"/>
+                    <connections>
+                        <outlet property="picker" destination="URZ-qv-EP7" id="bbR-bi-eWT"/>
+                        <outlet property="runVerLabel" destination="8BQ-hx-PHQ" id="sLt-Xg-V3n"/>
+                        <outlet property="typeLabel" destination="zNj-Td-ipQ" id="rp9-Lr-Itw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ui5-ny-FGB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="853" y="1182"/>
+        </scene>
         <!--OTP 驗證碼-->
         <scene sceneID="OVc-M0-tO1">
             <objects>
@@ -448,11 +527,12 @@
                     <connections>
                         <segue destination="LcU-aw-Hm6" kind="relationship" relationship="viewControllers" id="3Rr-5k-enV"/>
                         <segue destination="ncz-a6-fBI" kind="relationship" relationship="viewControllers" id="Ltl-dT-qmp"/>
+                        <segue destination="UYp-Ld-Clo" kind="relationship" relationship="viewControllers" id="K1b-t5-6vt"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b5z-NN-gBt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-163" y="168"/>
+            <point key="canvasLocation" x="-217" y="498"/>
         </scene>
         <!--幕後-->
         <scene sceneID="3Am-oV-ogL">
@@ -492,9 +572,29 @@
             </objects>
             <point key="canvasLocation" x="416" y="-142"/>
         </scene>
+        <!--電子地圖-->
+        <scene sceneID="d26-Rr-mOG">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UYp-Ld-Clo" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="電子地圖" image="map_marker-32.png" id="rbW-af-ooa"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7sf-9g-umx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xXT-gN-TJW" kind="relationship" relationship="rootViewController" id="y2W-pm-rtS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pBi-FY-fQf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="416" y="1188"/>
+        </scene>
     </scenes>
     <resources>
         <image name="card_in_use-32.png" width="32" height="32"/>
+        <image name="map_marker-32.png" width="32" height="32"/>
         <image name="money_box-32.png" width="32" height="32"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
