--- a/Example/AllPayMobileSDK iOS Example/Base.lproj/Main.storyboard
+++ b/Example/AllPayMobileSDK iOS Example/Base.lproj/Main.storyboard
@@ -199,8 +199,23 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <pickerView hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="URZ-qv-EP7">
+                                <rect key="frame" x="0.0" y="357" width="320" height="162"/>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LVa-Wu-jjN">
+                                <rect key="frame" x="85" y="248" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="zPj-Ec-Wuq"/>
+                                </constraints>
+                                <state key="normal" title="取得超商資料">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="callBtnClickHandle:" destination="xXT-gN-TJW" eventType="touchUpInside" id="Rfn-dn-97W"/>
+                                </connections>
+                            </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="J6i-bA-cM3">
-                                <rect key="frame" x="56" y="181" width="208" height="29"/>
+                                <rect key="frame" x="56" y="191" width="208" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="208" id="S2x-Z3-oBH"/>
                                 </constraints>
@@ -209,22 +224,10 @@
                                     <segment title="代收貨款"/>
                                 </segments>
                             </segmentedControl>
-                            <pickerView hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="URZ-qv-EP7">
-                                <rect key="frame" x="0.0" y="357" width="320" height="162"/>
-                            </pickerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LVa-Wu-jjN">
-                                <rect key="frame" x="85" y="230" width="150" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="zPj-Ec-Wuq"/>
-                                </constraints>
-                                <state key="normal" title="Call">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="J6i-bA-cM3" firstAttribute="top" secondItem="zNj-Td-ipQ" secondAttribute="bottom" constant="22" id="1qo-9e-Cri"/>
+                            <constraint firstItem="J6i-bA-cM3" firstAttribute="top" secondItem="zNj-Td-ipQ" secondAttribute="bottom" constant="32" id="1qo-9e-Cri"/>
                             <constraint firstItem="8BQ-hx-PHQ" firstAttribute="top" secondItem="obQ-ap-pYz" secondAttribute="bottom" constant="10" id="4LU-o2-ue9"/>
                             <constraint firstAttribute="centerX" secondItem="8BQ-hx-PHQ" secondAttribute="centerX" constant="4" id="5B1-4I-wju"/>
                             <constraint firstAttribute="centerX" secondItem="J6i-bA-cM3" secondAttribute="centerX" id="7K4-J6-PjA"/>
@@ -232,7 +235,7 @@
                             <constraint firstAttribute="trailing" secondItem="URZ-qv-EP7" secondAttribute="trailing" id="PjM-fe-cLX"/>
                             <constraint firstItem="6nN-vp-vSm" firstAttribute="top" secondItem="URZ-qv-EP7" secondAttribute="bottom" id="UhY-Xp-k5E"/>
                             <constraint firstAttribute="centerX" secondItem="zNj-Td-ipQ" secondAttribute="centerX" id="byW-om-Vuy"/>
-                            <constraint firstItem="LVa-Wu-jjN" firstAttribute="top" secondItem="J6i-bA-cM3" secondAttribute="bottom" constant="21" id="pEj-XR-vgd"/>
+                            <constraint firstItem="LVa-Wu-jjN" firstAttribute="top" secondItem="J6i-bA-cM3" secondAttribute="bottom" constant="29" id="pEj-XR-vgd"/>
                             <constraint firstItem="URZ-qv-EP7" firstAttribute="leading" secondItem="GU2-u1-Vfc" secondAttribute="leading" id="rdJ-3Z-Erx"/>
                             <constraint firstAttribute="centerX" secondItem="LVa-Wu-jjN" secondAttribute="centerX" id="wTb-iu-7Ol"/>
                         </constraints>
@@ -241,6 +244,7 @@
                     <connections>
                         <outlet property="picker" destination="URZ-qv-EP7" id="bbR-bi-eWT"/>
                         <outlet property="runVerLabel" destination="8BQ-hx-PHQ" id="sLt-Xg-V3n"/>
+                        <outlet property="seqmented" destination="J6i-bA-cM3" id="e8P-Ze-98W"/>
                         <outlet property="typeLabel" destination="zNj-Td-ipQ" id="rp9-Lr-Itw"/>
                     </connections>
                 </viewController>
